basic DOM working with all inputs

--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
 
 					<label for="letters">Uppercase</label>
 					<div class="checkbox">
-						<input type="checkbox" id="switch" />
-						<label for="switch">Toggle</label>
+						<input type="checkbox" id="upper-case" />
+						<label for="upper-case">Toggle</label>
 					</div>
-					<!--<input type="checkbox" id="letters" />-->
 
 					<label>Numbers</label>
 					<div class="checkbox">
@@ -37,8 +36,8 @@
 
 					<label for="special-chars">Special Characters</label>
 					<div class="checkbox">
-						<input type="checkbox" id="special-chars" />
-						<label for="special-chars">Toggle</label>
+						<input type="checkbox" id="special-characters" />
+						<label for="special-characters">Toggle</label>
 					</div>
 
 					<button type="submit">Submit</button>
