--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 						<img src="copy-icon.png" />
 					</button>
 				</div>
-				<form action="">
+				<form action="" id="form">
 					<label for="length">Password length</label>
 					<div class="fg"><input type="range" id="length" min="1" max="50" value="1" /></div>
 
@@ -40,7 +40,7 @@
 						<label for="special-characters">Toggle</label>
 					</div>
 
-					<button type="submit">Submit</button>
+					<button type="submit" id="submit">Submit</button>
 				</form>
 			</div>
 		</main>
