random password display completed

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 			<div class="main-wrapper">
 				<div class="title">Password Generator</div>
 				<div class="display-wrapper">
-					<input class="display" />
+					<input id="display" value="hel" class="display" />
 					<button id="copy">
 						<img src="copy-icon.png" />
 					</button>
 				</div>
 				<form action="" id="form">
 					<label for="length">Password length</label>
-					<div class="fg"><input type="range" id="length" min="1" max="50" value="1" /></div>
+					<div class="fg"><input type="range" id="length" min="1" max="50" value="10" /></div>
 
 					<label for="letters">Uppercase</label>
 					<div class="checkbox">
