--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Password Generator</title>
 
+		<link rel="icon" href="images/page-icon.png" />
 		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 
@@ -20,7 +21,7 @@
 				<div class="display-wrapper">
 					<input id="display" class="display dark-txt dark-bck dark-border" placeholder="password" />
 					<button id="copy" class="dark-border">
-						<img src="copy-icon.png" />
+						<img src="images/copy-icon.png" />
 					</button>
 				</div>
 				<form action="" id="form" class="dark-bck">
